[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "geoeventfusion"
version = "1.0.0"
description = "Modular multi-agent geopolitical intelligence pipeline powered by GDELT DOC 2.0"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["geopolitics", "intelligence", "GDELT", "NLP", "LLM", "event-fusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "trafilatura>=1.9.0",
    "newspaper3k>=0.2.8",
    "networkx>=3.2.1",
    "anthropic>=0.34.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "folium>=0.17.0",
    "Levenshtein>=0.25.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
    "types-python-dateutil>=2.9.0",
    "responses>=0.25.0",
]

[project.scripts]
geoeventfusion = "scripts.run_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["geoeventfusion*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/", "notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["geoeventfusion"]
omit = ["tests/*", "scripts/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
